--- a/index.html
+++ b/index.html
@@ -27,15 +27,25 @@
           <div class="row p-3">
             <div class="mb-3">
               <label for="name" class="form-label">Nome:</label>
-              <input type="text" class="form-control" id="name" />
+              <input type="text" class="form-control" id="name" name="name" />
             </div>
             <div class="mb-3">
               <label for="email" class="form-label">E-mail:</label>
-              <input type="email" class="form-control" id="email" />
+              <input
+                type="email"
+                class="form-control"
+                id="email"
+                name="email"
+              />
             </div>
             <div class="mb-3">
               <label for="password" class="form-label">Senha:</label>
-              <input type="password" class="form-control" id="password" />
+              <input
+                type="password"
+                class="form-control"
+                id="password"
+                name="password"
+              />
             </div>
             <div class="mb-3">
               <input type="submit" class="btn btn-primary" value="Cadastrar" />
